feat: add initial configuration files and entry points

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "./build/index.js",
   "exports": {
     ".": "./build/index.js",
+    "./types": "./build/src/types/index.js",
     "./config": "./build/config/pusher.js",
+    "./services/main": "./build/services/main.js",
     "./provider": "./build/providers/pusher_provider.js"
   },
   "files": [
