--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@swc/core": "^1.13.3",
     "@types/node": "^24.1.0",
     "c8": "^10.1.3",
+    "copyfiles": "^2.4.1",
     "del-cli": "^6.0.0",
     "eslint": "^9.32.0",
     "prettier": "^3.6.2",
