fix: remove unused tsup dependency and update tsconfig for improved structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "@adonisjs/tsconfig/tsconfig.package.json",
   "compilerOptions": {
+    "rootDir": "./",
     "outDir": "./build",
-    "rootDir": "./src"
-  },
-  "include": ["src/**/*"],
-  "exclude": ["tests/**/*", "node_modules/**/*"]
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
+  }
 }
